--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
     "hammerjs": "^2.0.8",
+    "ngx-bootstrap": "^5.1.1",
     "rxjs": "^6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
