--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "extract-translations": "ngx-translate-extract --input ./src --output ./src/assets/i18n/*.json --clean --sort --format namespaced-json --marker _"
+    "extract-translations": "ngx-translate-extract --input ./src --output ./src/assets/i18n/*.json --clean --sort --format namespaced-json --marker _",
+    "jsonserver": "json-server --watch sampledatajsonserver/data.json ",
+    "serve2": "ng serve --proxy-config=proxy.conf.json"
   },
   "private": true,
   "dependencies": {
@@ -17,6 +19,7 @@
     "@angular/common": "~8.2.4",
     "@angular/compiler": "~8.2.4",
     "@angular/core": "~8.2.4",
+    "@angular/flex-layout": "^8.0.0-beta.27",
     "@angular/forms": "~8.2.4",
     "@angular/material": "^8.2.0",
     "@angular/platform-browser": "~8.2.4",
@@ -24,7 +27,11 @@
     "@angular/router": "~8.2.4",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
+    "chart.js": "^2.8.0",
+    "chartist": "^0.11.4",
     "hammerjs": "^2.0.8",
+    "ng-chartist": "^4.1.0",
+    "ng2-charts": "^2.3.0",
     "ngx-bootstrap": "^5.1.1",
     "rxjs": "^6.4.0",
     "tslib": "^1.10.0",
@@ -35,6 +42,7 @@
     "@angular/cli": "~8.3.3",
     "@angular/compiler-cli": "~8.2.4",
     "@angular/language-service": "~8.2.4",
+    "@types/chartist": "^0.9.46",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
@@ -47,6 +55,7 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
+    "ng2-charts-schematics": "^0.1.7",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
