--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/platform-browser": "~8.2.4",
     "@angular/platform-browser-dynamic": "~8.2.4",
     "@angular/router": "~8.2.4",
+    "@auth0/angular-jwt": "^3.0.0",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
     "chart.js": "^2.8.0",
@@ -33,6 +34,7 @@
     "ng-chartist": "^4.1.0",
     "ng2-charts": "^2.3.0",
     "ngx-bootstrap": "^5.1.1",
+    "ngx-perfect-scrollbar": "^8.0.0",
     "rxjs": "^6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
